first notebook done!

--- a/notebooks/Introduction to Deep Learning.ipynb
+++ b/notebooks/Introduction to Deep Learning.ipynb
@@ -1857,7 +1857,7 @@
     "collapsed": true
    },
    "source": [
-    "## Now, let's stack some layers and see if we can crush some benchmarks"
+    "## **Now, let's stack some layers and see if we can crush some benchmarks**"
    ]
   },
   {
