making progress on cnn lecture

--- a/notebooks/Convolutional Networks.ipynb
+++ b/notebooks/Convolutional Networks.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "**Required Reading**\n",
     "\n",
-    "[Ian Goodfellow's Deep Learning: 9.1-9.4](https://www.deeplearningbook.org/contents/convnets.html)\n",
+    "- [Ian Goodfellow's Deep Learning: 9.1-9.4](https://www.deeplearningbook.org/contents/convnets.html)\n",
     "\n",
     "**Additional Reading/Viewing**\n",
     "\n",
@@ -165,11 +165,282 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/spacer_small-01.png)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- As you can imagine, there are many variants of convolution used in CNNS, here's some nice animtaions from [vdumoulin](https://github.com/vdumoulin/conv_arithmetic):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<table style=\"width:100%; table-layout:fixed;\">\n",
+    "  <tr>\n",
+    "    <td><img width=\"150px\" src=\"../videos/conv_animations/no_padding_no_strides.gif\"></td>\n",
+    "    <td><img width=\"150px\" src=\"../videos/conv_animations/arbitrary_padding_no_strides.gif\"></td>\n",
+    "    <td><img width=\"150px\" src=\"../videos/conv_animations/same_padding_no_strides.gif\"></td>\n",
+    "    <td><img width=\"150px\" src=\"../videos/conv_animations/full_padding_no_strides.gif\"></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>**No padding, no strides**</td>\n",
+    "    <td>**Arbitrary padding, no strides**</td>\n",
+    "    <td>**Half padding, no strides**</td>\n",
+    "    <td>**Full padding, no strides**</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><img width=\"150px\" src=\"../videos/conv_animations/no_padding_strides.gif\"></td>\n",
+    "    <td><img width=\"150px\" src=\"../videos/conv_animations/padding_strides.gif\"></td>\n",
+    "    <td><img width=\"150px\" src=\"../videos/conv_animations/padding_strides_odd.gif\"></td>\n",
+    "    <td></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>**No padding, strides**</td>\n",
+    "    <td>**Padding, strides**</td>\n",
+    "    <td>**Padding, strides (odd)**</td>\n",
+    "    <td></td>\n",
+    "  </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/spacer_small-01.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The convolution operation is used in many areas of mathematics and engineering, we can express 2d convolution like this:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$$\n",
+    "S(i, j) = \\sum_m \\sum_n I(i-m, j-n)K(m, n)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Where $I$ is our input image, $K$ is kernel and S is our output. \n",
+    "- Subtracting $m$ and $n$ from $i$ and $j$ has the effect of flipping our kernel $K$ makes convolution commutative. However, in Convolutional Neural Networks, we don't really care about the computative property, and many libraries, including tensorflow implement the **cross-correlation** function instead of **convolution**:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "S(i, j) = \\sum_m \\sum_n I(i+m, j+n)K(m, n)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/spacer_small-01.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Why CNNs?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- As nicely stated the exceprt from Yann Lecun's 1989 paper above, CNNs \"allow us to express information about the geometry and topology of the task\". The arrangement of the pixels in our images is not arbitrary, and we know the lots of information can be gleaned by looking at local neighborhoods of our images (such as edge detection) - CNNs are an ideal tool for this. \n",
+    "- Aside from taking advantage of the topology of images, CNNs are also **incredibly efficient**. \n",
+    "- Let's have a look at LeCun's 1998 convolutional neueral network, LeNet-5, that achieves a 99.05 accuracy on mnist. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/question_two-01.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/question_three-01.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- So, the first layer of LeNet-5 has way less parameters than our 7 layer fully connected layers. \n",
+    "- **Why might this be advantageous?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/spacer_small-01.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Pooling**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Let's look at one more interesting idea from LeNet-5. After each convolutional layer, Yann includes a \"subsampling\" layer. Today we call this a **pooling** layer. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/lenet_5_screenshot.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Notice that after each of Yann's pooling layers, our feature maps decrease in size by a factor of 2. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/spacer_small-01.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ![](../graphics/pooling-01.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
