cnn notebook complete

--- a/notebooks/Convolutional Networks.ipynb
+++ b/notebooks/Convolutional Networks.ipynb
@@ -403,80 +403,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Pooling makes our networks **approximately invariant** to translations in our input. \n",
+    "- This can be advantageous in problems like image classification, where the exactly location of features is less important than their general location. \n",
+    "- Pooling also reduces the size of our data at it flows through our network, allowing us to effectively make our networks smaller and more efficient."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Enough Talking, Let's Train LeNet-5**"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/lenet_5_screenshot.png)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- I've implemented a modern version of LeNet-5 in models/LeNet-5, with a few changes from Yann's original implementation:\n",
+    "    - Activation functions immediately follow conv layers, not pooling layers. \n",
+    "    - Our pooling layers don't have learnable parameters, unlike LeCun's sub-sampling layers \n",
+    "    - We're using a cross entropy cost function, LeNet used radial basis functions \n",
+    "    - We're using the Adam optimizer, LeCun used gradient descent with a variable learning rate."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To train LeNet-5, please navigate your terminal to this repo and run: "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "python train.py -d python train.py -d LeNet_5\n",
+    "```"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../graphics/lenet_vs_7_layer.png)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We've a acheives a 99% test set accuracy with our LeNet-5 implementation!\n",
+    "- We did this be leveraging something we knew about images: **That the relative location of our pixels mater**, and that we can achieve very good performance by sliding the same convolutional kernel across our whole image. \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -484,58 +477,17 @@
     "collapsed": true
    },
    "source": [
-    "Ok, I'm thinkig we do the following:\n",
-    "\n",
-    "- Introduce CNNs\n",
-    "- Look at LeNet-5, MC question on counting parameters\n",
-    "- Review + Train tensorflow implementation\n",
-    "- Basic visualization of what our network learned. "
+    "## **What Did LeNet-5 Learn?**"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Yann has some nice [visualizations](http://yann.lecun.com/exdb/lenet/index.html) of LeNet-5 in action on this website. "
+   ]
   }
  ],
  "metadata": {
